--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,7 @@
 <h1>OMDB Movie Search</h1>
 <p>Search for a movie below...</p>
+<form method="GET" action="/results">
+    <label for="title">Title:</label>
+    <input type="text" name="title" id="title">
+    <input type="submit" value="Go">
+</form>
